좌우진보 수정

--- a/04.html
+++ b/04.html
@@ -267,7 +267,7 @@
         import { getFirestore, collection, addDoc, updateDoc, deleteDoc, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         // 요청하신 법식 순서 고정
-        const FIX_ORDER = ['시립', '법배', '평배', '향남읍', '좌배', '국궁', '좌우진보', '법좌', '수련방법', '점호의례', '봉심의례', '부정기휘법'];
+        const FIX_ORDER = ['시립', '법배', '평배', '향남읍', '좌배', '국궁', '좌·우진보', '법좌', '수련방법', '점호의례', '봉심의례', '부정기휘법'];
 
         const YOUR_FIREBASE_CONFIG = {
             apiKey: "AIzaSyAoUdyZJQjcT81_2YKzX1rzMJlNAoHcbAw",
