--- a/01.html
+++ b/01.html
@@ -361,7 +361,7 @@
                                         <div class="flex items-center gap-3 p-3 bg-stone-50 rounded-lg">
                                             <span class="font-bold text-stone-500 w-16">👣 ↑</span>
                                             <div class="flex-1">
-                                                <div class="text-xs text-stone-500 font-bold">갱진 1보 (앞으로 1걸음)</div>
+                                                <div class="text-xs text-stone-500 font-bold">갱진 1보 (왼쪽 1걸음)</div>
                                                 <div class="font-bold text-k-text">평배 2배</div>
                                             </div>
                                         </div>
@@ -461,7 +461,7 @@
 
                             <div class="bg-white p-5 rounded-xl border border-stone-200">
                                 <strong class="block text-theme-color text-xl font-bold mb-3">2. 퇴장 시작</strong>
-                                <p class="text-stone-700 mb-2">가장 안쪽 줄인 <strong>내수(여성)</strong> 줄부터 퇴장합니다.</p>
+                                <p class="text-stone-700 mb-2">가장 뒤쪽 줄인 <strong>내수(여성)</strong> 줄부터 퇴장합니다.</p>
                                 <p class="text-stone-700 mb-3 bg-stone-50 p-2 rounded"><strong>방법:</strong> 중앙의 2명(6번, 7번)을 선두로 <strong>2명씩 짝을 지어</strong> 나갑니다.</p>
                                 <div class="flex items-center gap-2 text-sm font-bold text-stone-500 bg-stone-100 p-3 rounded-lg justify-center">
                                     <span>내수 줄</span>
