전체 좌향좌 강조

--- a/01.html
+++ b/01.html
@@ -453,7 +453,7 @@
                                     <span class="font-serif font-bold text-lg text-theme-color">"국궁 예필 퇴"</span>
                                 </div>
                                 <ul class="space-y-2 text-stone-700">
-                                    <li>1. <strong>전체 좌향좌:</strong> 왼쪽 방향으로 뒤로 돕니다.</li>
+                                    <li>1. <strong>전체 좌향좌:</strong> <span class="text-red-600 font-bold">왼쪽 방향으로</span> 뒤로 돕니다.</li>
                                     <li>2. <strong>전진 3보:</strong> 앞으로 3발짝 이동합니다.</li>
                                     <li>3. <strong>대열 정비:</strong> 앞쪽 5명(8~12번)은 다시 왼쪽 방향으로 뒤로 돌아, 6-7번 도인은 출구를 향해 섭니다.</li>
                                 </ul>
