--- a/02.html
+++ b/02.html
@@ -546,26 +546,26 @@
             { time: "07:30", title: "진시 기도", loc: "대강전 1층", note: "07:20까지 대기 및 명상", role: "all" },
             { time: "07:50", title: "아침 식사", loc: "식당", note: "", role: "all" },
             { time: "08:15", title: "방장 회의", loc: "별관", note: "사수 필수 참석", role: "sasu" },
-            { time: "09:50", title: "사수 회의", loc: "별관", role: "sasu" }
+            { time: "09:50", title: "사수 회의", loc: "별관", role: "sasu" },
             { time: "09:00", title: "청소", loc: "지정 구역", note: "", role: "learner_only" },
-            { time: "10:05", title: "수련 대기 및 환영", loc: "대강전 2층", note: "공부자 환영 준비", role: "sasu" }
-            { time: "10:20", title: "사수 스피치", loc: "대강전 2층", role: "sasu" }
+            { time: "10:05", title: "수련 대기 및 환영", loc: "대강전 2층", note: "공부자 환영 준비", role: "sasu" },
+            { time: "10:20", title: "사수 스피치", loc: "대강전 2층", role: "sasu" },
             { time: "10:30", title: "오전 수련", loc: "대강전 2층", note: "10:10까지 대기", role: "all" },
             { time: "11:30", title: "오시 기도", loc: "대강전 1층", note: "", role: "all" },
             { time: "12:00", title: "점심 식사", loc: "식당", note: "", role: "all" },
             { time: "12:20", title: "토론", loc: "청학관", note: "", role: "all" },
             { time: "13:30", title: "미시 기도", loc: "대강전 1층", note: "13:20까지 대기 및 명상", role: "all" },
             { time: "14:00", title: "일대일 만남", loc: "청학관", note: "", role: "all" },
-            { time: "16:05", title: "수련 대기 및 환영", loc: "대강전 2층", note: "공부자 환영 준비", role: "sasu" }
-            { time: "16:20", title: "사수 스피치", loc: "대강전 2층", role: "sasu" }
+            { time: "16:05", title: "수련 대기 및 환영", loc: "대강전 2층", note: "공부자 환영 준비", role: "sasu" },
+            { time: "16:20", title: "사수 스피치", loc: "대강전 2층", role: "sasu" },
             { time: "16:30", title: "오후 수련", loc: "대강전 2층", note: "16:10까지 대기", role: "all" },
-            { time: "17:00", title: "사수 회의", loc: "별관", note: "사수 일정 종료 보고", role: "sasu" }
+            { time: "17:00", title: "사수 회의", loc: "별관", note: "사수 일정 종료 보고", role: "sasu" },
             { time: "17:30", title: "유시 기도", loc: "대강전 1층", note: "17:20까지 대기 및 명상", role: "all" },
             { time: "18:00", title: "저녁 식사", loc: "식당", note: "", role: "all" },
             { time: "19:30", title: "술시 기도", loc: "대강전 1층", note: "19:20까지 대기 및 명상", role: "all" },
-            { time: "19:50", title: "체조", loc: "대강전 1층", note: "20:00까지", role: "all" }
+            { time: "19:50", title: "체조", loc: "대강전 1층", note: "20:00까지", role: "all" },
             { time: "20:00", title: "자유시간", loc: "-", note: "혹은 일대일 만남", role: "all" },
-            { time: "20:00", title: "사수 교대", loc: "별관", note: "사수 필수 참석", role: "sasu" }
+            { time: "20:00", title: "사수 교대", loc: "별관", note: "사수 필수 참석", role: "sasu" },
             { time: "20:30", title: "명상", loc: "대강전 2층", note: "21:10까지 진행", role: "all" },
             { time: "21:30", title: "점호", loc: "대강전 1층", note: "21:20분까지 대기. 점호 전까지 혈압 체크 완료하기", role: "all" },
             { time: "22:30", title: "드는 봉심", loc: "대강전 2층", note: "22:20까지 승정문 앞 대기", role: "all" },
