--- a/02.html
+++ b/02.html
@@ -526,6 +526,12 @@
             { time: "17:30", title: "저녁 식사", loc: "식당", note: "", role: "all" },
             { time: "19:30", title: "술시 기도", loc: "대강전 1층", note: "19:20까지 대기 및 명상", role: "all" },
             { time: "19:50", title: "체조", loc: "대강전 1층", note: "20:00까지", role: "all" }
+            { time: "20:00", title: "자유시간", loc: "-", note: "혹은 일대일 만남", role: "all" },
+            { time: "20:00", title: "사수 교대", loc: "별관", note: "사수 필수 참석", role: "sasu" },
+            { time: "20:30", title: "명상", loc: "대강전 2층", note: "21:10까지 진행", role: "all" },
+            { time: "21:30", title: "점호", loc: "대강전 1층", note: "21:20분까지 대기. 점호 전까지 혈압 체크 완료하기", role: "all" },
+            { time: "22:30", title: "드는 봉심", loc: "대강전 2층", note: "22:20까지 승정문 앞 대기", role: "all" },
+            { time: "23:30", title: "퇴배 봉심", loc: "대강전 2층", note: "23:20까지 승정문 앞 대기", role: "all" }
         ];
 
         // Data - Sunday Schedule
@@ -569,7 +575,6 @@
             { time: "20:30", title: "명상", loc: "대강전 2층", note: "21:10까지 진행", role: "all" },
             { time: "21:30", title: "점호", loc: "대강전 1층", note: "21:20분까지 대기. 점호 전까지 혈압 체크 완료하기", role: "all" },
             { time: "22:30", title: "드는 봉심", loc: "대강전 2층", note: "22:20까지 승정문 앞 대기", role: "all" },
-            { time: "23:30", title: "자시 기도", loc: "대강전 1층", note: "주일 드는 날, 23:20까지 대기 및 명상", role: "all" },
             { time: "23:30", title: "퇴배 봉심", loc: "대강전 2층", note: "23:20까지 승정문 앞 대기", role: "all" }
         ];
 
