--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 태극도 공부 길라잡이
             </h1>
             <p class="font-sans text-stone-600 text-base md:text-lg font-medium tracking-wide keep-all leading-relaxed">
-                도를 구하는 마음으로 <span class="text-stone-800 font-bold underline decoration-stone-300 decoration-2 underline-offset-4">공부에 첫걸음</span>을 내디딘 종도분들을 환영합니다.<br class="hidden md:block"/>
+                도를 구하는 마음으로 <span class="text-stone-800 font-bold underline decoration-stone-300 decoration-2 underline-offset-4">공부에 첫걸음</span>을 내디딘 도인분들을 환영합니다.<br class="hidden md:block"/>
                 올바른 예법과 마음가짐을 위한 안내서입니다.
             </p>
         </header>
@@ -122,7 +122,7 @@
                             <h2 class="font-serif text-2xl font-bold text-k-text group-hover:text-theme-navy transition-colors">법식 안내</h2>
                         </div>
                         <p class="text-stone-600 text-sm md:text-base leading-relaxed keep-all group-hover:text-stone-800">
-                            도장 내에서 행하는 <strong class="text-theme-navy font-bold">배례법</strong>과 <strong class="text-theme-navy font-bold">식사 예절</strong> 등 모든 의식 절차를 배웁니다.
+                            도장 내에서 행하는 <strong class="text-theme-navy font-bold">배례와 봉심</strong> 등 <strong class="text-theme-navy font-bold">기본 예절</strong> 등 모든 의식 절차를 배웁니다.
                         </p>
                     </div>
                 </div>
