--- a/04.html
+++ b/04.html
@@ -102,7 +102,7 @@
                 <div class="w-24 h-1 bg-theme-color mt-4 mb-6 rounded-full"></div>
                 
                 <p class="text-stone-700 font-medium text-lg sm:text-xl break-keep leading-relaxed">
-                    종도들이 갖추어야 할 기본 예법과<br class="hidden sm:block"> 마음가짐을 안내합니다.
+                    도인들이 갖추어야 할 기본 예법과<br class="hidden sm:block"> 마음가짐을 안내합니다.
                 </p>
             </div>
         </header>
@@ -132,7 +132,7 @@
                 <div class="space-y-6">
                     <p class="text-lg text-sub font-medium leading-relaxed">
                         복잡한 입실 동선을 시각적으로 익혀보세요.<br>
-                        회원과 내수는 뒤로 물러나고, 들어오는 종도는 기존 인원의 뒤로 돌아갑니다.
+                        회원과 내수는 뒤로 물러나고, 들어오는 공부자는 기존 인원의 뒤로 돌아갑니다.
                     </p>
                     
                     <div class="bg-stone-50 border border-stone-200 rounded-lg p-6 text-base text-k-text font-medium leading-loose">
