--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             /* --- 미리보기 테스트용 가짜 데이터 (실제 깃허브에서는 지우셔도 무방합니다) --- */
             const mockDataForPreview = {
-                '01.html': '도문에 들어서기 전 갖추어야 할 단정한 복장과 마음가짐 예시를 확인합니다.',
+                '01.html': '도장에 들어서기 전 갖추어야 할 단정한 복장과 마음가짐 예시를 확인합니다.',
                 '02.html': '수도인으로서 하루의 시작과 끝, 지켜야 할 예절과 일과 예시입니다.',
                 '03.html': '도장의 주요 일정, 행사 소식 및 알림 사항 예시입니다.',
                 '04.html': '배례와 봉심 등 기본 예절 예시입니다.'
