--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
             </p>
         </header>
 
-        <!-- 지민님이 원하신 검색창 위치 (헤더 아래, 네비게이션 위) -->
+        <!-- 검색창 -->
         <div class="mb-12 flex flex-col items-center w-full relative z-20">
             <div class="relative w-full max-w-md">
                 <!-- 돋보기 아이콘 -->
                 <svg class="absolute left-4 top-1/2 -translate-y-1/2 w-5 h-5 text-stone-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                 </svg>
-                <!-- 검색 입력창 (type="module" 대응을 위해 id 활용) -->
+                <!-- 검색 입력창 -->
                 <input type="text" id="searchInput" placeholder="궁금한 내용을 검색해보세요 (예: 예절)" class="w-full pl-11 pr-20 py-3 rounded-full border border-stone-300 bg-white focus:outline-none focus:border-theme-navy focus:ring-2 focus:ring-theme-navy/20 shadow-sm transition-all text-sm md:text-base text-stone-700">
                 <!-- 검색 버튼 -->
                 <button id="searchButton" class="absolute right-1.5 top-1/2 -translate-y-1/2 bg-theme-navy hover:bg-slate-700 text-white px-4 py-1.5 rounded-full text-sm font-medium transition-colors duration-300 shadow-sm">
@@ -297,9 +297,18 @@
                         text = mockDataForPreview[page]; 
                     }
 
-                    const tempDiv = document.createElement("div");
-                    tempDiv.innerHTML = text;
-                    const pureText = tempDiv.innerText || tempDiv.textContent;
+                    // DOMParser를 사용하여 HTML 파싱 후 불필요한 태그(스크립트 등) 제거
+                    const parser = new DOMParser();
+                    const doc = parser.parseFromString(text, 'text/html');
+                    
+                    // script, style 등 화면에 보이지 않아야 할 코드 태그들을 모두 삭제
+                    const elementsToRemove = doc.querySelectorAll('script, style, noscript, svg, iframe');
+                    elementsToRemove.forEach(el => el.remove());
+
+                    // 순수 텍스트만 추출하고, 여러 줄의 공백을 한 칸으로 정제
+                    let pureText = doc.body.textContent || doc.body.innerText || "";
+                    pureText = pureText.replace(/\s+/g, ' ').trim();
+
                     const index = pureText.indexOf(keyword);
                     
                     if (index !== -1) {
