점호 내용 추가

--- a/01.html
+++ b/01.html
@@ -248,7 +248,7 @@
                 description: "인원 점검을 마치고, 입소 의식인 '드는 봉심'을 위해 경건하게 준비합니다.",
                 steps: [
                     { time: "21:20 까지", title: "대기 완료", desc: "대강전 1층에 도착하여 대기합니다. <strong>점호시 다다미 2칸에 3명 시립합니다.</strong><br><br><ul class='list-disc list-inside space-y-1 pl-1 text-stone-600'><li>회원은 시간표의 번호 확인 후 정렬</li><li>외수/내수는 공부 시간에 맞게 정렬</li></ul>" },
-                    { time: "21:30", title: "점호 시작", desc: "대강전 1층에서 전체 점호를 실시합니다.<br><span class='text-theme-color font-bold bg-theme-soft px-1 rounded'>주의: 호명 시 고개를 숙이지 않고 바른 자세로 '네'하고 답합니다.</span>" }
+                    { time: "21:30", title: "점호 진행", desc: "대강전 1층에서 전체 점호를 실시합니다.<br><span class='text-theme-color font-bold bg-theme-soft px-1 rounded inline-block my-2'>주의: 호명 시 고개를 숙이지 않고 바른 자세로 '네'하고 답합니다.</span><br><div class='bg-stone-50 p-4 rounded-lg border border-stone-200 mt-2'><strong class='block text-theme-color mb-2'>[진행 순서]</strong><ol class='list-decimal list-inside space-y-1.5 text-stone-700 font-medium'><li><strong>호명</strong></li><li><strong>향전배례</strong> (구령에 맞춰 배례)</li><li><strong>공지사항 청취</strong> (시학원의 지시에 따라)</li><li><strong>좌배 후 일동 흥, 국궁, 예필 퇴</strong> 순으로 진행</li></ol></div>" }
                 ]
             },
             {
@@ -265,8 +265,8 @@
                 content: {
                     'enter': `
                         <div class="space-y-6">
-                            <!-- 중요 수칙 강조 박스 -->
-                            <div class="bg-red-50 border-l-4 border-red-500 p-5 rounded-r-lg shadow-sm animate-pulse-slow">
+                            <!-- 중요 수칙 강조 박스 (애니메이션 제거됨) -->
+                            <div class="bg-red-50 border-l-4 border-red-500 p-5 rounded-r-lg shadow-sm">
                                 <h4 class="flex items-center gap-2 text-red-700 font-bold text-lg mb-3">
                                     <span class="text-2xl">⚠️</span> [필독] 입장 시 절대 수칙
                                 </h4>
