--- a/02.html
+++ b/02.html
@@ -387,6 +387,7 @@
                         
                         <div class="bg-stone-50 border border-stone-200 rounded-lg p-6 text-base text-k-text font-medium leading-loose">
                             <ul class="list-disc pl-5 space-y-3">
+                                <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">법방 앞 대기 예절</strong> 입실 대기 시 회원과 내수는 공부방 문 앞을 정면으로 가리고 서지 않도록 합니다.</li>
                                 <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">과한 인사 지양</strong> 입실 후에는 너무 과한 인사를 하지 않습니다. 좌배(坐拜)로 시작해서 좌배로 끝날 수 있도록 과한 부복(엎드려 절함)은 하지 않습니다.</li>
                                 <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">회원에게 속도 맞춤</strong> 옆의 회원이 자리에 앉으면 청소를 멈추고 정돈합니다. 모든 행동의 속도는 회원에게 맞춰야 합니다.</li>
                                 <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">교대 시 거리 확보</strong> 회원과 내수가 엉덩이를 뒤로 물릴 때, 다음 공부자가 지나갈 수 있는 거리를 확보하고 물러나야 합니다. 너무 뒤로 물러나면 벽과의 공간이 없어 통행이 어렵습니다.</li>
@@ -455,10 +456,8 @@
             { time: "22:30", title: "드는 봉심", loc: "대강전 2층 승정문 앞", note: "22:20까지 시립", role: "all" },
             { time: "23:30", title: "퇴배 봉심", loc: "대강전 2층 승정문", note: "23:20까지 정렬, 하루 일과 마무리", role: "all" },
             { time: "23:50", title: "퇴배 종료", loc: "대강전 1층", note: "인사 후 귀가", role: "all" },
-            { time: "24:00", title: "취침", loc: "숙소", note: "", role: "all" },
             // --- 공부 당일 ---
             { time: "01:30", title: "축시 기도", loc: "대강전 1층", note: "01:20까지 대기 및 명상", role: "all" },
-            { time: "02:00", title: "취침", loc: "숙소", note: "", role: "all" },
             { time: "07:10", title: "체조", loc: "대강전 1층", note: "", role: "all" },
             { time: "07:30", title: "진시 기도", loc: "대강전 1층", note: "07:20까지 대기 및 명상", role: "all" },
             { time: "07:50", title: "아침 식사", loc: "식당", note: "", role: "all" },
@@ -481,7 +480,15 @@
             { time: "17:00", title: "사수 회의", loc: "별관", note: "사수 일정 종료 보고", role: "sasu" },
             { time: "17:30", title: "저녁 식사", loc: "식당", note: "", role: "all" },
             { time: "19:30", title: "술시 기도", loc: "대강전 1층", note: "19:20까지 대기 및 명상", role: "all" },
-            { time: "19:50", title: "체조", loc: "대강전 1층", note: "20:00까지", role: "all" }
+            { time: "19:50", title: "체조", loc: "대강전 1층", note: "20:00까지", role: "all" },
+            // --- 공부 당일 저녁 (추가됨) ---
+            { time: "20:00", title: "사수 교대", loc: "별관", note: "소감 발표", role: "sasu" },
+            { time: "20:00", title: "자유시간", loc: "-", note: "혹은 일대일 만남", role: "learner_only" },
+            { time: "20:30", title: "명상", loc: "대강전 2층", note: "21:10까지 진행", role: "all" },
+            { time: "21:30", title: "점호", loc: "대강전 1층", note: "점호 전까지 혈압 체크 완료하기", role: "all" },
+            { time: "22:30", title: "드는 봉심", loc: "대강전 2층 승정문 앞", note: "22:20까지 시립", role: "all" },
+            { time: "23:30", title: "퇴배 봉심", loc: "대강전 2층 승정문", note: "23:20까지 정렬, 하루 일과 마무리", role: "all" },
+            { time: "23:50", title: "퇴배 종료", loc: "대강전 1층", note: "인사 후 귀가", role: "all" }
         ];
 
         // Data - Sunday Schedule
@@ -502,8 +509,8 @@
             { time: "07:30", title: "진시 기도", loc: "대강전 1층", note: "07:20까지 대기 및 명상", role: "all" },
             { time: "07:50", title: "아침 식사", loc: "식당", note: "", role: "all" },
             { time: "08:15", title: "방장 회의", loc: "별관", note: "사수 필수 참석", role: "sasu" },
-            { time: "09:50", title: "사수 회의", loc: "별관", note: "", role: "sasu" },
             { time: "09:00", title: "청소", loc: "지정 구역", note: "", role: "learner_only" },
+            { time: "09:50", title: "사수 회의", loc: "별관", note: "", role: "sasu" },
             { time: "10:05", title: "수련 대기 및 환영", loc: "대강전 2층", note: "공부자 환영 준비", role: "sasu" },
             { time: "10:20", title: "사수 스피치", loc: "대강전 2층", note: "", role: "sasu" },
             { time: "10:30", title: "오전 수련", loc: "대강전 2층", note: "10:10까지 대기", role: "all" },
@@ -520,7 +527,14 @@
             { time: "17:30", title: "유시 기도", loc: "대강전 1층", note: "17:20까지 대기 및 명상", role: "all" },
             { time: "18:00", title: "저녁 식사", loc: "식당", note: "", role: "all" },
             { time: "19:30", title: "술시 기도", loc: "대강전 1층", note: "19:20까지 대기 및 명상", role: "all" },
-            { time: "19:50", title: "체조", loc: "대강전 1층", note: "20:00까지", role: "all" }
+            { time: "19:50", title: "체조", loc: "대강전 1층", note: "20:00까지", role: "all" },
+            // --- 공부 당일 저녁 (추가됨) ---
+            { time: "20:00", title: "자유시간", loc: "-", note: "혹은 일대일 만남", role: "all" },
+            { time: "20:00", title: "사수 교대", loc: "별관 1층", note: "사수 필수 참석", role: "sasu" },
+            { time: "20:30", title: "명상", loc: "대강전 2층", note: "21:10까지 진행", role: "all" },
+            { time: "21:30", title: "점호", loc: "대강전 1층", note: "21:20분까지 대기. 점호 전까지 혈압 체크 완료하기", role: "all" },
+            { time: "22:30", title: "드는 봉심", loc: "대강전 2층", note: "22:20까지 승정문 앞 대기", role: "all" },
+            { time: "23:30", title: "퇴배 봉심", loc: "대강전 2층", note: "23:20까지 승정문 앞 대기", role: "all" }
         ];
 
         let currentTab = 'schedule';
@@ -1073,17 +1087,15 @@
             generateRitualTimeline();
         }
     </script>
-<!-- 검색어 형광펜 및 자동 스크롤 기능 (수정됨) -->
+<!-- 검색어 형광펜 및 자동 스크롤 기능 -->
 <script>
 window.addEventListener("load", function() {
     const params = new URLSearchParams(window.location.search);
     const keyword = params.get('search');
     
     if (keyword) {
-        // 검색 기능으로 들어왔을 때는 현재 시간 기준 자동 스크롤을 막아 충돌을 방지합니다.
         window.hasScrolledToActive = true;
 
-        // 본문 렌더링이 완료될 시간을 위해 약간 대기합니다. (DOM이 js로 생성되므로)
         setTimeout(() => {
             const walk = document.createTreeWalker(document.body, NodeFilter.SHOW_TEXT, null, false);
             let node;
@@ -1109,21 +1121,19 @@ window.addEventListener("load", function() {
                 setTimeout(() => {
                     const firstMark = document.querySelector('mark.search-highlight');
                     if (firstMark) {
-                        // 02.html의 고유한 탭(섹션) 구조에 맞게 화면을 열어주는 로직
                         const sectionParent = firstMark.closest('section[id^="view-"]');
                         if (sectionParent) {
                             const tabId = sectionParent.id.replace('view-', '');
                             if (typeof switchTab === 'function') {
-                                switchTab(tabId); // 02.html 내부 함수를 직접 호출
+                                switchTab(tabId);
                             }
                         }
 
-                        // 요소가 화면에 보이도록 스크롤
                         firstMark.scrollIntoView({ behavior: 'smooth', block: 'center' });
                     }
                 }, 100);
             }
-        }, 300); // 탭 내용들이 렌더링될 시간 0.3초 대기
+        }, 300); 
     }
 });
 </script>
