시뮬 주의사항 추가

--- a/04.html
+++ b/04.html
@@ -145,6 +145,7 @@
                     
                     <div class="bg-stone-50 border border-stone-200 rounded-lg p-6 text-base text-k-text font-medium leading-loose">
                         <ul class="list-disc pl-5 space-y-3">
+                            <li><strong class="text-theme bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">법방 앞 대기 예절</strong> 입실 대기 시 회원과 내수는 공부방 문 앞을 정면으로 가리고 서지 않도록 합니다.</li>
                             <li><strong class="text-theme-color bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">과한 인사 지양</strong> 입실 후에는 과한 인사를 하지 않습니다. 좌배(坐拜)로 시작해서 좌배로 끝날 수 있도록 합니다.</li>
                             <li><strong class="text-theme-color bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">회원에게 속도 맞춤</strong> 옆의 회원이 자리에 앉으면 행동을 정돈합니다. 모든 속도는 회원에게 맞춰야 합니다.</li>
                             <li><strong class="text-theme-color bg-white px-2 py-0.5 rounded border border-stone-200 shadow-sm">교대 시 거리 확보</strong> 회원과 내수가 뒤로 물러날 때, 다음 공부자가 지나갈 수 있는 충분한 거리를 확보해야 합니다.</li>
